--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,6 +568,7 @@
 
 .bar {
     display: none;
+    z-index: 15;
 }
 
 .col-3 {
@@ -601,15 +602,23 @@
     min-height: 108px;
 }
 
+.hide-menu {
+    background-color: #2059c1;
+    height: 100%;
+    width: 100%;
+    z-index: 11;
+    left: -100%;
+    top: 0%;
+}
+
 @media (max-width:992px) {
     .bar {
         display: flex;
+        z-index: 5;
     }
 
     .menu {
-        /* display: none; */
-        position: absolute;
-        left: -100%;
+        display: none;
     }
 
     .wv-50 {
@@ -628,7 +637,6 @@
         padding-top: 17px;
         padding-bottom: 17px;
     }
-}
 
 @media (min-width:576px) {
     .col-sm-12 {
@@ -729,7 +737,6 @@
     .right-border::after {
         content: '';
         position: absolute;
-        z-index: 15;
         border-right: 3px solid #FFFFFF;
         height: 100%;
         width: 100%;
