--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,7 +637,7 @@
         padding-top: 17px;
         padding-bottom: 17px;
     }
-
+}
 @media (min-width:576px) {
     .col-sm-12 {
         width: 100%;
