--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,10 +461,6 @@
     color: #4D4D4D;
 }
 
-.size-16 {
-    font-size: 16px;
-}
-
 .width-270 {
     max-width: 270px;
 }
@@ -622,6 +618,10 @@
 
 .width-920 {
     max-width: 920px;
+}
+
+.size-16 {
+    font-size: 16px;
 }
 
 @media (max-width:992px) {
@@ -805,9 +805,15 @@
     .heading {
         font-size: 36px;
     }
-    .lorem-2,.Explore{
+
+    .lorem-2,
+    .Explore {
         font-size: 48px;
         line-height: 62.4px;
+    }
+
+    .size-16 {
+        font-size: 16px;
     }
 
     .radius-150 {
